fix: increase background opacity from 0.5 to 0.75 for better contrast

--- a/src/style.scss
+++ b/src/style.scss
@@ -248,11 +248,12 @@ box.notification-card {
   }
 }
 
+popover,
 popover.menu {
 
   contents,
   arrow {
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.75);
   }
 }
 
@@ -261,7 +262,7 @@ revealer {
 }
 
 window.notification-center {
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.75);
   border-radius: 16px;
   padding: 16px 16px 0px 16px;
 
@@ -330,7 +331,7 @@ calendar.view {
 
       // Today's date
       &.today {
-        background-color: rgba(255, 255, 255, 0.90);
+        background-color: rgba(255, 255, 255, 0.75);
         color: black;
         font-weight: 600;
       }
